[gd_scene load_steps=2 format=3 uid="uid://kownpofw1xoy"]

[ext_resource type="Script" path="res://addons/plugin_manager/RepoDisplayer.gd" id="1_tae6j"]

[node name="RepoDisplayer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tae6j")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NameText" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="PathText" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
